--- a/24001182-km7-nai-aut-ch5/package.json
+++ b/24001182-km7-nai-aut-ch5/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.js",
     "prisma:db:pull": "npx prisma db pull",
     "prisma:generate": "npx prisma generate",
-    "prisma:refresh": "npm run prisma:db:pull && npm run prisma:generate"
+    "prisma:refresh": "npm run prisma:db:pull && npm run prisma:generate && npx prisma migrate dev",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
