update email terdaftar

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,13 +50,11 @@
       "runtimeArgs": ["run", "dev"]
     },
     {
-      "type": "node",
+      "name": "Chapter-6",
       "request": "launch",
-      "name": "Chapter-6 react.js",
-      "skipFiles": ["<node_internals>/**"],
-      "cwd": "${workspaceFolder}/Chapter-6/student-app",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": ["run", "dev"]
+      "type": "chrome",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}/Chapter-6/student-app"
     }
   ]
 }
